--- a/FrontEnd/Front.html
+++ b/FrontEnd/Front.html
@@ -7,20 +7,8 @@
 </head>
 <body>
     <h1>Espèces 1</h1>
-    <button id="getDataBtn">Récupérer les informations</button>
-    <div id="dataContainer"></div>
-
     <script>
-        document.getElementById('getDataBtn').addEventListener('click', () => {
-            fetch('http://localhost:2000/data')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('dataContainer').innerText = JSON.stringify(data, null, 2);
-                })
-                .catch(error => {
-                    console.error('Erreur lors de la récupération des données :', error);
-                });
-        });
+        alert('TEST');
     </script>
 </body>
 </html>
