Final change style

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,5 +21,9 @@
 
     <div id="root"></div>
 
+    <footer class="footer">
+        © 2024 BioExplorer, Matis BREILLAD. All rights reserved.
+    </footer>
+
   </body>
 </html>
